# imas-data-dictionary

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DD_Support.xsd  DD_Support_Auto.xsd  DD_TOP.xsd  IDSDef.xml  IDSDef.xml.xsd  IDSDef2htm.xsl  IDSDef_2_HTMLDocumentation.xsl  IDSDef_global2htm.xsl  IDSDef_validation.html.xsl  IDSDef_validation.txt.xsl  IDSDef_validation.xsl  LICENSE.md  MANIFEST.in  Makefile  Makefile.common  README.md  Utilities_2_HTMLDocumentation.xsl  bamboo-build-sphinx-docs.sh  build-sphinx-docs.sh  clean.py  configure.py  count_AoS1_descendents_with_timebase.xml.xsl  count_AoS1_descendents_with_timebase.xsl  dd_data_dictionary.xml.xsd  dd_data_dictionary.xml.xsl  dd_data_dictionary_html_documentation.xsl  dd_data_dictionary_validation.txt.xsl  dd_physics_data_dictionary.xsd  dd_physics_data_model.xsd  generate.py  generate_docs.py  ids_cocos_transformations_symbolic_table.csv.xsl  install.py  pyproject.toml  setup.cfg  setup.py  (+12 more)
Actuator/: DD_Actuator.xsd  IDSDef_Actuator.xml
Controllers/: DD_Controllers.xsd
Core_Plasma/: DD_core_plasma.xsd
Core_Profiles/: Core_Profiles.html  DD_Core_Profiles.xsd  IDSDef_Core_Profiles.xml  IDS_Def.xml
Core_Sources/: DD_Core_Sources.xsd
Core_Transport/: DD_Core_Transport.xsd
Dina/: DD_DINA.xsd  DD_dina.xsd
EMCoupling/: DD_EMCoupling.xsd
Equilibrium/: DD_Equilibrium.xsd  IDSDef_Equilibrium.xml
HTML_Documentation/: 20130730.htm  20130823.htm  HTML_Doc_Actuator.html  HTML_Doc_Core_Profiles.html  HTML_Doc_Equilibrium.html  HTML_Doc_Global.html  HTML_Doc_Magnetics.html  HTML_Doc_PF.html  HTML_Doc_SDN.html  HTML_Doc_TF.html  how_to.txt
Magnetics/: DD_Magnetics.xsd  IDSDef_Magnetics.xml
PF/: DD_PF.xsd  IDSDef_PF.xml
PFactive/: DD_PF.xsd  DD_PFactive.xsd
PFpassive/: DD_PF.xsd  DD_PFpassive.xsd
SDN/: DD_SDN.xsd  IDSDef_SDN.xml
Schedule/: DD_Schedule.xsd
Simulation/: DD_Simulation.xsd
TF/: DD_TF.xsd  IDSDef_TF.xml
Temporary/: DD_Temporary.xsd
Utilities/: DD_Support.xsd  DD_Support_v2.xsd
actuator/: dd_actuator.xsd
amns_data/: dd_amns_data.xsd
antennas/: dd_antennas.xsd
atomic_data/: dd_atomic_data.xsd
b_field_non_axisymmetric/: dd_b_field_non_axisymmetric.xsd
barometry/: dd_barometry.xsd
bolometer/: dd_bolometer.xsd
bremsstrahlung_visible/: dd_bremsstrahlung_visible.xsd
calorimetry/: dd_calorimetry.xsd
camera_ir/: dd_camera_ir.xsd
camera_visible/: dd_camera_visible.xsd
camera_x_rays/: dd_camera_x_rays.xsd
charge_exchange/: dd_charge_exchange.xsd
coils_non_axisymmetric/: dd_coils_non_axisymmetric.xsd
controllers/: dd_controllers.xsd
core_instant_changes/: core_instant_changes_identifier.xml  dd_core_instant_changes.xsd
core_plasma/: dd_core_plasma.xsd
core_profiles/: dd_core_profiles.xsd
(+226 files in other folders)
