
[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8","sphinx >= 6.0, < 7.0", "sphinx-immaterial >= 0.11.4, < 0.12.0", "gitpython", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "data_dictionary"
description ="The Data Dictionary is the implementation of the Data Model of ITER's Integrated Modelling & Analysis Suite (IMAS)"
authors = [{name = "ITER Organization", email = "imas-support@iter.org"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.md"}
keywords = ["Data Dictionary", "IDS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics"
]
dynamic = ["version"]

[project.optional-dependencies]
docs = ["sphinx >= 6.0, < 7.0",
"sphinx-immaterial >= 0.11.4, < 0.12.0",
"gitpython"]

[project.urls]
homepage = "https://imas.iter.org/"

[tool.setuptools_scm]
write_to = "data_dictionary/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_dictionary*"]

[project.scripts]
idsinfo = "data_dictionary.idsinfo:main"

# Including script files
[tool.setuptools]
script-files = [
    "scripts/dd_doc",
    "scripts/dd_doclegacy"
]

