
[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "packaging", "saxonche"]
build-backend = "setuptools.build_meta"

[project]
name = "imas-data-dictionary-test"
description ="The Data Dictionary is the implementation of the Data Model of ITER's Integrated Modelling & Analysis Suite (IMAS)"
authors = [{name = "ITER Organization", email = "imas-support@iter.org"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE-LGPL"}
keywords = ["IMAS", "Data Dictionary", "IDS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics"
]
dynamic = ["version"]
dependencies = [
    "packaging",
    "setuptools_scm>=8"
]

[project.urls]
homepage = "https://github.com/iterorganization/imas-data-dictionary"

[tool.setuptools_scm]
write_to = "data_dictionary/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_dictionary*"]

[project.scripts]
idsinfo = "data_dictionary.idsinfo:main"

# Including script files
[tool.setuptools]
script-files = [
    "scripts/dd_doc",
    "scripts/dd_doclegacy"
]

